# CBOSS

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
CBOSS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bayesian_models/: acquisitions.py  bhs.py  classification.py  features.py  kernels.py  means.py  metrics.py  regression.py  svgp.py
models/: batch_ode.py  models.py  search_space.py
notebooks/: FRCHEI.ipynb  FRCHEI_hyperparameters.ipynb  GP_classification.ipynb  GP_regression.ipynb  GP_regression_BQP.ipynb  SA_hyperparameters.ipynb  distribution_explorer.ipynb
optimizers/: CBOSS.py  CHSBO.py  random_sampler.py  simulated_annealing.py
test/: test_Tee.py  test_batchode.py  test_bayesian_models.py  test_distributions.py  test_learning.py  test_models.py  test_search_space.py  test_svgp.py
utils/: Tee.py  distributions.py  file_encoders.py  log_utils.py  numpy_utils.py  python_utils.py  torch_utils.py
